Add support for _name, _inherit, _inherits + PyCharm 2022.2 (#8)
* Add autocompletion with inherit

* Update to PyCharm 2022.2

* Add support to _inherit & _inherits

* Update change-note, use stream

* Update to PyCharm 2022.2, Java 17

Update module to PyCharm 2022.2
Use Java 17